objects/Phone2PersonRelationship__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Phone Numbers</relationshipLabel>
        <relationshipName>Phone2ContactRelationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <description>add 1 to a record with each dispo flow</description>
        <label>Dials</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Or_Contact_Id__c</fullName>
        <formula>if(NOT(ISBLANK(Contact__c)),Contact__c,  Lead__c )</formula>
        <label>Lead Or Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Related Phone Numbers</relationshipLabel>
        <relationshipName>Phone2LeadRelationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phonenumber__c</fullName>
        <label>Phonenumber</label>
        <referenceTo>Phonenumber__c</referenceTo>
        <relationshipName>Phonenumbers2Individuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Phone2Person Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead_Or_Contact_Id__c</columns>
        <columns>Lead__c</columns>
        <columns>Contact__c</columns>
        <columns>Phonenumber__c</columns>
        <columns>Dials__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P2P-{000000}</displayFormat>
        <label>Phone2Person Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phone2Person Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>